# The-Forge-Project-Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Libs/: CMakeLists.txt
Sources/: CMakeLists.txt
